# template-python-project

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements_dev.txt  setup.cfg
.github/: dependabot.yaml
.github/workflows/: python-app.yaml  python-app.yml
