[project]
authors = []
dependencies = []
name = "template-python-project"
version = "0.0.1"

[tool.setuptools]
py-modules = []

[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel"]

[project.optional-dependencies]
dev = [
  "autoflake",
  "black",
  "flake8",
  "isort",
  "mypy",
  "pip-tools",
  "pre-commit",
  "pytest",
  "pytest-cov",
]

[tool.black]
include = '\.pyi?$'
line-length = 120

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "def __str__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "if typing.TYPE_CHECKING:",
]

[tool.coverage.run]
branch = true
omit = ["tests/fixtures/*"]
source = ["src", "tests"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "-ra -v --durations=5 --cov=src"
